--- a/MangaReader_WebUI/Views/MangaSearch/_SearchPaginationPartial.cshtml
+++ b/MangaReader_WebUI/Views/MangaSearch/_SearchPaginationPartial.cshtml
@@ -17,17 +17,16 @@
                            page = Math.Max(1, Model.CurrentPage - 1), 
                            title = Model.SortOptions.Title, 
                            status = Model.SortOptions.Status, 
-                           publicationDemographic = Model.SortOptions.Demographic,
+                           publicationDemographic = Model.SortOptions.PublicationDemographic,
                            contentRating = Model.SortOptions.ContentRating,
                            sortBy = Model.SortOptions.SortBy, 
-                           authors = string.Join(",", Model.SortOptions.Authors ?? new List<string>()),
-                           artists = string.Join(",", Model.SortOptions.Artists ?? new List<string>()),
+                           authors = string.Join(",", Model.SortOptions.AuthorIds ?? new List<string>()),
                            year = Model.SortOptions.Year,
                            includedTagsMode = Model.SortOptions.IncludedTagsMode,
                            excludedTagsMode = Model.SortOptions.ExcludedTagsMode,
                            pageSize = Model.PageSize,
-                           includedTagsStr = string.Join(",", Model.SortOptions.IncludedTags ?? new List<string>()),
-                           excludedTagsStr = string.Join(",", Model.SortOptions.ExcludedTags ?? new List<string>())
+                           includedTagsStr = Model.SortOptions.IncludedTagsStr,
+                           excludedTagsStr = Model.SortOptions.ExcludedTagsStr
                        })" 
                        hx-target="#search-results-and-pagination" 
                        hx-push-url="true" 
@@ -42,17 +41,16 @@
                            page = 1, 
                            title = Model.SortOptions.Title, 
                            status = Model.SortOptions.Status, 
-                           publicationDemographic = Model.SortOptions.Demographic,
+                           publicationDemographic = Model.SortOptions.PublicationDemographic,
                            contentRating = Model.SortOptions.ContentRating,
                            sortBy = Model.SortOptions.SortBy, 
-                           authors = string.Join(",", Model.SortOptions.Authors ?? new List<string>()),
-                           artists = string.Join(",", Model.SortOptions.Artists ?? new List<string>()),
+                           authors = string.Join(",", Model.SortOptions.AuthorIds ?? new List<string>()),
                            year = Model.SortOptions.Year,
                            includedTagsMode = Model.SortOptions.IncludedTagsMode,
                            excludedTagsMode = Model.SortOptions.ExcludedTagsMode,
                            pageSize = Model.PageSize,
-                           includedTagsStr = string.Join(",", Model.SortOptions.IncludedTags ?? new List<string>()),
-                           excludedTagsStr = string.Join(",", Model.SortOptions.ExcludedTags ?? new List<string>())
+                           includedTagsStr = Model.SortOptions.IncludedTagsStr,
+                           excludedTagsStr = Model.SortOptions.ExcludedTagsStr
                        })" 
                        hx-target="#search-results-and-pagination" 
                        hx-push-url="true">
@@ -75,17 +73,16 @@
                                page = i, 
                                title = Model.SortOptions.Title, 
                                status = Model.SortOptions.Status, 
-                               publicationDemographic = Model.SortOptions.Demographic,
+                               publicationDemographic = Model.SortOptions.PublicationDemographic,
                                contentRating = Model.SortOptions.ContentRating,
                                sortBy = Model.SortOptions.SortBy, 
-                               authors = string.Join(",", Model.SortOptions.Authors ?? new List<string>()),
-                               artists = string.Join(",", Model.SortOptions.Artists ?? new List<string>()),
+                               authors = string.Join(",", Model.SortOptions.AuthorIds ?? new List<string>()),
                                year = Model.SortOptions.Year,
                                includedTagsMode = Model.SortOptions.IncludedTagsMode,
                                excludedTagsMode = Model.SortOptions.ExcludedTagsMode,
                                pageSize = Model.PageSize,
-                               includedTagsStr = string.Join(",", Model.SortOptions.IncludedTags ?? new List<string>()),
-                               excludedTagsStr = string.Join(",", Model.SortOptions.ExcludedTags ?? new List<string>())
+                               includedTagsStr = Model.SortOptions.IncludedTagsStr,
+                               excludedTagsStr = Model.SortOptions.ExcludedTagsStr
                            })" 
                            hx-target="#search-results-and-pagination" 
                            hx-push-url="true">
@@ -109,17 +106,16 @@
                                page = totalPages, 
                                title = Model.SortOptions.Title, 
                                status = Model.SortOptions.Status, 
-                               publicationDemographic = Model.SortOptions.Demographic,
+                               publicationDemographic = Model.SortOptions.PublicationDemographic,
                                contentRating = Model.SortOptions.ContentRating,
                                sortBy = Model.SortOptions.SortBy, 
-                               authors = string.Join(",", Model.SortOptions.Authors ?? new List<string>()),
-                               artists = string.Join(",", Model.SortOptions.Artists ?? new List<string>()),
+                               authors = string.Join(",", Model.SortOptions.AuthorIds ?? new List<string>()),
                                year = Model.SortOptions.Year,
                                includedTagsMode = Model.SortOptions.IncludedTagsMode,
                                excludedTagsMode = Model.SortOptions.ExcludedTagsMode,
                                pageSize = Model.PageSize,
-                               includedTagsStr = string.Join(",", Model.SortOptions.IncludedTags ?? new List<string>()),
-                               excludedTagsStr = string.Join(",", Model.SortOptions.ExcludedTags ?? new List<string>())
+                               includedTagsStr = Model.SortOptions.IncludedTagsStr,
+                               excludedTagsStr = Model.SortOptions.ExcludedTagsStr
                            })" 
                            hx-target="#search-results-and-pagination" 
                            hx-push-url="true">
@@ -134,17 +130,16 @@
                            page = Math.Min(totalPages, Model.CurrentPage + 1), 
                            title = Model.SortOptions.Title, 
                            status = Model.SortOptions.Status, 
-                           publicationDemographic = Model.SortOptions.Demographic,
+                           publicationDemographic = Model.SortOptions.PublicationDemographic,
                            contentRating = Model.SortOptions.ContentRating,
                            sortBy = Model.SortOptions.SortBy, 
-                           authors = string.Join(",", Model.SortOptions.Authors ?? new List<string>()),
-                           artists = string.Join(",", Model.SortOptions.Artists ?? new List<string>()),
+                           authors = string.Join(",", Model.SortOptions.AuthorIds ?? new List<string>()),
                            year = Model.SortOptions.Year,
                            includedTagsMode = Model.SortOptions.IncludedTagsMode,
                            excludedTagsMode = Model.SortOptions.ExcludedTagsMode,
                            pageSize = Model.PageSize,
-                           includedTagsStr = string.Join(",", Model.SortOptions.IncludedTags ?? new List<string>()),
-                           excludedTagsStr = string.Join(",", Model.SortOptions.ExcludedTags ?? new List<string>())
+                           includedTagsStr = Model.SortOptions.IncludedTagsStr,
+                           excludedTagsStr = Model.SortOptions.ExcludedTagsStr
                        })" 
                        hx-target="#search-results-and-pagination" 
                        hx-push-url="true" 
