--- a/MangaReader_WebUI/Views/MangaSearch/_SearchPaginationPartial.cshtml
+++ b/MangaReader_WebUI/Views/MangaSearch/_SearchPaginationPartial.cshtml
@@ -19,8 +19,10 @@
                            status = Model.SortOptions.Status, 
                            publicationDemographic = Model.SortOptions.PublicationDemographic,
                            contentRating = Model.SortOptions.ContentRating,
+                           availableTranslatedLanguage = Model.SortOptions.AvailableTranslatedLanguage,
                            sortBy = Model.SortOptions.SortBy, 
-                           authors = string.Join(",", Model.SortOptions.AuthorIds ?? new List<string>()),
+                           authors = string.Join(",", Model.SortOptions.Authors ?? new List<string>()),
+                           artists = string.Join(",", Model.SortOptions.Artists ?? new List<string>()),
                            year = Model.SortOptions.Year,
                            includedTagsMode = Model.SortOptions.IncludedTagsMode,
                            excludedTagsMode = Model.SortOptions.ExcludedTagsMode,
@@ -43,8 +45,10 @@
                            status = Model.SortOptions.Status, 
                            publicationDemographic = Model.SortOptions.PublicationDemographic,
                            contentRating = Model.SortOptions.ContentRating,
+                           availableTranslatedLanguage = Model.SortOptions.AvailableTranslatedLanguage,
                            sortBy = Model.SortOptions.SortBy, 
-                           authors = string.Join(",", Model.SortOptions.AuthorIds ?? new List<string>()),
+                           authors = string.Join(",", Model.SortOptions.Authors ?? new List<string>()),
+                           artists = string.Join(",", Model.SortOptions.Artists ?? new List<string>()),
                            year = Model.SortOptions.Year,
                            includedTagsMode = Model.SortOptions.IncludedTagsMode,
                            excludedTagsMode = Model.SortOptions.ExcludedTagsMode,
@@ -75,8 +79,10 @@
                                status = Model.SortOptions.Status, 
                                publicationDemographic = Model.SortOptions.PublicationDemographic,
                                contentRating = Model.SortOptions.ContentRating,
+                               availableTranslatedLanguage = Model.SortOptions.AvailableTranslatedLanguage,
                                sortBy = Model.SortOptions.SortBy, 
-                               authors = string.Join(",", Model.SortOptions.AuthorIds ?? new List<string>()),
+                               authors = string.Join(",", Model.SortOptions.Authors ?? new List<string>()),
+                               artists = string.Join(",", Model.SortOptions.Artists ?? new List<string>()),
                                year = Model.SortOptions.Year,
                                includedTagsMode = Model.SortOptions.IncludedTagsMode,
                                excludedTagsMode = Model.SortOptions.ExcludedTagsMode,
@@ -108,8 +114,10 @@
                                status = Model.SortOptions.Status, 
                                publicationDemographic = Model.SortOptions.PublicationDemographic,
                                contentRating = Model.SortOptions.ContentRating,
+                               availableTranslatedLanguage = Model.SortOptions.AvailableTranslatedLanguage,
                                sortBy = Model.SortOptions.SortBy, 
-                               authors = string.Join(",", Model.SortOptions.AuthorIds ?? new List<string>()),
+                               authors = string.Join(",", Model.SortOptions.Authors ?? new List<string>()),
+                               artists = string.Join(",", Model.SortOptions.Artists ?? new List<string>()),
                                year = Model.SortOptions.Year,
                                includedTagsMode = Model.SortOptions.IncludedTagsMode,
                                excludedTagsMode = Model.SortOptions.ExcludedTagsMode,
@@ -132,8 +140,10 @@
                            status = Model.SortOptions.Status, 
                            publicationDemographic = Model.SortOptions.PublicationDemographic,
                            contentRating = Model.SortOptions.ContentRating,
+                           availableTranslatedLanguage = Model.SortOptions.AvailableTranslatedLanguage,
                            sortBy = Model.SortOptions.SortBy, 
-                           authors = string.Join(",", Model.SortOptions.AuthorIds ?? new List<string>()),
+                           authors = string.Join(",", Model.SortOptions.Authors ?? new List<string>()),
+                           artists = string.Join(",", Model.SortOptions.Artists ?? new List<string>()),
                            year = Model.SortOptions.Year,
                            includedTagsMode = Model.SortOptions.IncludedTagsMode,
                            excludedTagsMode = Model.SortOptions.ExcludedTagsMode,
